1) added ingredients 2) added recipe steps using recycler view and fragments.

--- a/app/src/main/res/layout/activity_recipe_detail.xml
+++ b/app/src/main/res/layout/activity_recipe_detail.xml
@@ -10,7 +10,8 @@
     <LinearLayout
         android:id="@+id/recipe_detail_linear_layout"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
 
 
     <TextView
@@ -23,10 +24,23 @@
     <FrameLayout
         android:id="@+id/ingredients"
         android:layout_width="match_parent"
-        android:layout_height="180dp"
+        android:layout_height="wrap_content"
         android:scaleType="centerInside"
         android:paddingBottom="16dp"
         android:paddingTop="16dp"/>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Steps title"
+            android:paddingBottom="16dp" />
+
+        <!-- A Container is created to hold the stepsFragment -->
+        <FrameLayout
+            android:id="@+id/steps"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:paddingTop="16dp"/>
 
     </LinearLayout>
 
