--- a/app/src/main/res/layout/activity_recipe_detail.xml
+++ b/app/src/main/res/layout/activity_recipe_detail.xml
@@ -18,6 +18,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Ingredients title"
+        android:textStyle="bold"
         android:paddingBottom="16dp"
         />
     <!-- A Container is created to hold the ingredientsFragment -->
@@ -33,6 +34,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Steps title"
+            android:textStyle="bold"
             android:paddingBottom="16dp" />
 
         <!-- A Container is created to hold the stepsFragment -->
