--- a/app/src/main/res/layout/fragment_steps_detail.xml
+++ b/app/src/main/res/layout/fragment_steps_detail.xml
@@ -3,12 +3,14 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools"
+    tools:layout_editor_absoluteX="0dp"
+    tools:layout_editor_absoluteY="250dp">
 
     <com.google.android.exoplayer2.ui.SimpleExoPlayerView
         android:id="@+id/playerView"
-        android:layout_width="500dp"
-        android:layout_height="500dp"
+        android:layout_width="wrap_content"
+        android:layout_height="256dp"
         app:layout_constraintTop_toTopOf="parent"
         android:layout_marginTop="0dp"
         android:layout_marginRight="0dp"
@@ -31,6 +33,7 @@
         android:id="@+id/stepDetailShort"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:textStyle="bold"
         android:paddingTop="5dp"
         android:paddingBottom="5dp"
         android:paddingLeft="5dp"
@@ -51,22 +54,24 @@
 
     <RelativeLayout
         android:id="@+id/detail_relative_layout"
-        android:layout_width="fill_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="@android:color/black" >
+        android:background="@android:color/black"
+        app:layout_constraintTop_toBottomOf="@+id/stepDetailDescription"
+        app:layout_constraintBottom_toBottomOf="parent" >
 
     <Button
         android:id="@+id/prev"
-        android:layout_width="100dp"
-        android:layout_height="100dp"
+        android:layout_width="wrap_content"
+        android:layout_height="50dp"
         android:text="Prev"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true" />
 
     <Button
         android:id="@+id/next"
-        android:layout_width="100dp"
-        android:layout_height="100dp"
+        android:layout_width="wrap_content"
+        android:layout_height="50dp"
         android:text="Next"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true" />
