--- a/app/src/main/res/layout-sw600dp/activity_recipe_detail.xml
+++ b/app/src/main/res/layout-sw600dp/activity_recipe_detail.xml
@@ -17,7 +17,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Ingredients title"
+        android:text="Ingredients"
         android:paddingBottom="16dp"
         />
     <!-- A Container is created to hold the ingredientsFragment -->
@@ -32,7 +32,8 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Steps title"
+            android:text="Steps"
+            android:textStyle="bold"
             android:paddingBottom="16dp" />
 
         <!-- A Container is created to hold the stepsFragment -->
