--- a/app/src/main/res/layout/activity_recipe_detail.xml
+++ b/app/src/main/res/layout/activity_recipe_detail.xml
@@ -1,23 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
     xmlns:tools="http://schemas.android.com/tools"
+    android:layout_height="match_parent"
+    android:layout_width="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context="com.example.android.baking.RecipeDetailActivity">
 
+<LinearLayout
 
-    <LinearLayout
         android:id="@+id/recipe_detail_linear_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:layout_alignParentTop="true"
+        >
 
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Ingredients title"
+        android:id="@+id/ingredients_title"
+        android:text="Ingredients"
         android:textStyle="bold"
         android:paddingBottom="16dp"
         />
@@ -28,23 +31,25 @@
         android:layout_height="wrap_content"
         android:scaleType="centerInside"
         android:paddingBottom="16dp"
-        android:paddingTop="16dp"/>
+        android:paddingTop="16dp"
+        />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Steps title"
+            android:text="Steps"
+            android:id="@+id/steps_title"
             android:textStyle="bold"
-            android:paddingBottom="16dp" />
+            android:paddingBottom="16dp"
+             />
 
         <!-- A Container is created to hold the stepsFragment -->
         <FrameLayout
             android:id="@+id/steps"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:paddingTop="16dp"/>
-
+            android:paddingTop="16dp"
+            />
     </LinearLayout>
-
 
 </ScrollView>
