--- a/app/src/main/res/layout/fragment_steps_detail.xml
+++ b/app/src/main/res/layout/fragment_steps_detail.xml
@@ -10,14 +10,14 @@
     <com.google.android.exoplayer2.ui.SimpleExoPlayerView
         android:id="@+id/playerView"
         android:layout_width="wrap_content"
-        android:layout_height="256dp"
+        android:layout_height="@dimen/player_height"
         app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="0dp"
-        android:layout_marginRight="0dp"
+        android:layout_marginTop="@dimen/margin"
+        android:layout_marginRight="@dimen/margin"
         app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginBottom="0dp"
+        android:layout_marginBottom="@dimen/margin"
         app:layout_constraintBottom_toTopOf="@+id/horizontalHalf"
-        android:layout_marginLeft="0dp"
+        android:layout_marginLeft="@dimen/margin"
         app:layout_constraintLeft_toLeftOf="parent"/>
 
     <android.support.constraint.Guideline
@@ -27,17 +27,17 @@
         android:orientation="horizontal"
         app:layout_constraintGuide_percent="0.5"
         tools:layout_editor_absoluteX="0dp"
-        tools:layout_editor_absoluteY="256dp" />
+        tools:layout_editor_absoluteY="@dimen/player_height" />
 
     <TextView
         android:id="@+id/stepDetailShort"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textStyle="bold"
-        android:paddingTop="5dp"
-        android:paddingBottom="5dp"
-        android:paddingLeft="5dp"
-        android:paddingRight="5dp"
+        android:paddingTop="@dimen/padding"
+        android:paddingBottom="@dimen/padding"
+        android:paddingLeft="@dimen/padding"
+        android:paddingRight="@dimen/padding"
         app:layout_constraintTop_toBottomOf="@+id/horizontalHalf"
         app:layout_constraintBottom_toTopOf="@+id/stepDetailDescription"
         />
@@ -46,10 +46,10 @@
         android:id="@+id/stepDetailDescription"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:paddingTop="5dp"
-        android:paddingBottom="5dp"
-        android:paddingLeft="5dp"
-        android:paddingRight="5dp"
+        android:paddingTop="@dimen/padding"
+        android:paddingBottom="@dimen/padding"
+        android:paddingLeft="@dimen/padding"
+        android:paddingRight="@dimen/padding"
         app:layout_constraintTop_toBottomOf="@+id/stepDetailShort"/>
 
     <RelativeLayout
@@ -63,7 +63,7 @@
     <Button
         android:id="@+id/prev"
         android:layout_width="wrap_content"
-        android:layout_height="50dp"
+        android:layout_height="@dimen/height"
         android:text="Prev"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true" />
@@ -71,7 +71,7 @@
     <Button
         android:id="@+id/next"
         android:layout_width="wrap_content"
-        android:layout_height="50dp"
+        android:layout_height="@dimen/height"
         android:text="Next"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true" />
