--- a/app/src/main/res/layout/recipes_list_item.xml
+++ b/app/src/main/res/layout/recipes_list_item.xml
@@ -1,13 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
+<android.support.v7.widget.CardView
     xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:layout_height="@dimen/card_height"
+    android:orientation="horizontal">
 
     <TextView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="@dimen/card_height"
         android:id="@+id/recipe_name"
-        android:textStyle="bold"/>
+        android:textStyle="bold"
+        android:textAlignment="center"/>
 
-</android.support.constraint.ConstraintLayout>
+</android.support.v7.widget.CardView>
