--- a/app/src/main/res/layout/recipes_list_item.xml
+++ b/app/src/main/res/layout/recipes_list_item.xml
@@ -1,14 +1,32 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.CardView
-    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
+<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
     android:layout_height="@dimen/card_height"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:orientation="horizontal">
+
+    <ImageView
+        android:id="@+id/recipe_image"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:paddingTop="@dimen/padding"
+        android:paddingBottom="@dimen/padding"
+        android:paddingLeft="@dimen/padding"
+        android:paddingRight="@dimen/padding"
+        android:visibility="gone"
+        app:layout_constraintLeft_toLeftOf="parent"
+        tools:src="@drawable/user_placeholder"/>
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="@dimen/card_height"
         android:id="@+id/recipe_name"
         android:textStyle="bold"
-        android:textAlignment="center"/>
+        android:textAlignment="center"
+        app:layout_constraintLeft_toRightOf="@+id/recipeImage"
+        />
+
+
 
 </android.support.v7.widget.CardView>
